Remove code smell